Revert "LPS-64222 - Source formatting"
This reverts commit f638727824978acefdf6257f0052b1f8212b8745.

--- a/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/application/_item_viewer.scss
+++ b/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/application/_item_viewer.scss
@@ -41,7 +41,9 @@
 }
 
 .image-viewer-footer-control {
-	&, &:focus, &:hover {
+	&,
+	&:focus,
+	&:hover {
 		color: #777;
 	}
 }
@@ -93,7 +95,9 @@
 		}
 
 		> .active > a {
-			&, &:focus, &:hover {
+			&,
+			&:focus,
+			&:hover {
 				border-color: transparent;
 				color: #777;
 
@@ -124,7 +128,9 @@
 	color: #FFF;
 	opacity: 1;
 
-	&, &:focus, &:hover {
+	&,
+	&:focus,
+	&:hover {
 		color: #FFF;
 	}
 
