--- a/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/portal/_item_viewer.scss
+++ b/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/portal/_item_viewer.scss
@@ -61,6 +61,8 @@
 		visibility: visible;
 	}
 
+	// Image Viewer Containers
+
 	.image-viewer-base-image-list {
 		padding-top: 35px;
 	}
@@ -74,6 +76,8 @@
 	.yui3-widget-bd {
 		position: relative;
 	}
+
+	// Image Viewer Close
 
 	.image-viewer-base {
 		.lfr-item-viewer-close {
@@ -96,6 +100,8 @@
 		}
 	}
 
+	// Image Viewer Footer
+
 	.image-viewer-footer-content {
 		padding: 0 20px;
 
@@ -108,7 +114,8 @@
 			margin: 0 10px;
 			position: relative;
 
-			&:focus, &:hover {
+			&:focus,
+			&:hover {
 				text-decoration: none;
 			}
 		}
@@ -166,10 +173,13 @@
 	float: right;
 	font-size: 20px;
 
-	&:focus, &:hover {
+	&:focus,
+	&:hover {
 		text-decoration: none;
 	}
 }
+
+// Image Viewer Sidenav
 
 .image-viewer-base {
 	&.open {
@@ -181,7 +191,8 @@
 	}
 
 	.image-viewer-sidenav {
-		&, .image-viewer-sidenav-menu {
+		&,
+		.image-viewer-sidenav-menu {
 			width: 300px;
 
 			@include sm {
